--- a/source/form.html
+++ b/source/form.html
@@ -38,7 +38,7 @@
       <section class="intro-inner wrapper">
         <h2 class="intro-inner__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
-      <section class="form">
+      <section class="form wrapper">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="form__header">
           <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
