--- a/source/form.html
+++ b/source/form.html
@@ -181,15 +181,21 @@
       </div>
     </footer>
     <section class="modal modal-error">
-      <h2 class="visually-hidden">Ошибка при отправке формы</h2>
-      <p class="modal__title">Что-то пошло не так!</p>
-      <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="button" type="button">Ок</button>
+      <div class="wrapper">
+        <h2 class="visually-hidden">Ошибка при отправке формы</h2>
+        <p class="modal__title">Что-то пошло не так!</p>
+        <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="button button--margin" type="button">Ок</button>
+      </div>
     </section>
     <section class="modal modal-show">
+      <div class="wrapper">
         <h2 class="modal__title">Ваша заявка отправлена</h2>
-        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее<br> и оповестим вас.</p>
+      </div>
+      <p class="modal__button">
         <button class="button" type="button">Закрыть окно</button>
+      </p>
       </section>
   </body>
 </html>
