--- a/source/index.html
+++ b/source/index.html
@@ -155,9 +155,9 @@
           </p>
         </div>
       </section>
-      <section class="contacts">
+      <section class="contacts main__contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
-        <div class="contacts__wrapper wrapper">
+        <div class="wrapper">
           <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
           <ul class="contacts__list">
             <li class="contacts__item">
