--- a/source/index.html
+++ b/source/index.html
@@ -9,30 +9,28 @@
   </head>
   <body class="page">
     <header class="header">
-      <div class="header__wrapper">
-        <nav class="main-nav main-nav--closed">
-          <div class="main-nav__menu">
-            <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-            </svg>
-            <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
-          </div>
-          <ul class="main-nav__list menu-list">
-            <li class="menu-list__item menu-list__item--active">
-              <a class="menu-list__link" href="#">Главная</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link" href="photo.html">Фотографии</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link" href="form.html">Конкурс</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link" href="#">Html Academy</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="main-nav main-nav--closed">
+        <div class="main-nav__menu">
+          <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+          </svg>
+          <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
+        </div>
+        <ul class="main-nav__list menu-list">
+          <li class="menu-list__item menu-list__item--active">
+            <a class="menu-list__link" href="#">Главная</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="photo.html">Фотографии</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="form.html">Конкурс</a>
+          </li>
+          <li class="menu-list__item">
+            <a class="menu-list__link" href="#">Html Academy</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main">
       <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
@@ -93,20 +91,17 @@
             <blockquote class="reviews__item reviews__item--active slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
@@ -138,21 +133,39 @@
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Розовый фильтр</td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Розовый фильтр</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Розовый фильтр</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Розовый фильтр</span></td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+              </td>
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Смайлики</td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Смайлики</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Смайлики</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Смайлики</span></td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Смайлики</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Смайлики</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Смайлики</span>
+              </td>
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Комментарии</td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Комментарии</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Комментарии</span></td>
-              <td class="tariff-selection__cell-option"><span class="tariff-selection__cell-hidden">Комментарии</span></td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Комментарии</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Комментарии</span>
+              </td>
+              <td class="tariff-selection__cell-option">
+                <span class="tariff-selection__cell-hidden">Комментарии</span>
+              </td>
             </tr>
           </table>
           <p class="price__toggles slider__toggles">
