--- a/source/photo.html
+++ b/source/photo.html
@@ -159,22 +159,39 @@
             </picture>
             <div class="photo-editor__interface">
               <div class="photo-editor__filter">
-                <div class="photo-editor__controls">
-                  <button class="photo-editor__toggle photo-editor__toggle--crop" type="button" aria-label="Обрезка фотографии"></button>
-                  <button class="photo-editor__toggle photo-editor__toggle--fill" type="button" aria-label="Выбор цвета фотографии"></button>
-                  <button class="photo-editor__toggle photo-editor__toggle--contrast" type="button" aria-label="Выбор контрастности фотографии"></button>
-                </div>
-                <ul class="photo-editor__list scale">
-                  <li class="photo-editor__item scale__slider" aria-label="Шкала кадрирования">
-                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы кадрирования</span></div>
-                  </li>
-                  <li class="photo-editor__item scale__slider" aria-label="Шкала цвета">
-                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы цвета</span></div>
-                  </li>
-                  <li class="photo-editor__item scale__slider" aria-label="Шкала контрастности">
-                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы контрастности</span></div>
-                  </li>
-                </ul>
+                <input class="visually-hidden" id="tool-crop" type="radio" name="tool" value="crop">
+                <label class="photo-editor__label" for="tool-crop">
+                  <span class="photo-editor__control photo-editor__control--crop" aria-label="Обрезка фотографии">
+                    <svg class="photo-editor__icon" width="45" height="45">
+                      <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
+                    </svg>
+                  </span>
+                  <span class="photo-editor__scale scale__slider" aria-label="Шкала кадрирования">
+                    <span class="scale__toggle" aria-label="Ползунок шкалы кадрирования"></span>
+                  </span>
+                </label>
+                <input class="visually-hidden" id="tool-fill" type="radio" name="tool" value="fill">
+                <label class="photo-editor__label" for="tool-fill">
+                  <span class="photo-editor__control photo-editor__control--fill" aria-label="Выбор цвета фотографии">
+                    <svg class="photo-editor__icon" width="49" height="45">
+                      <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
+                    </svg>
+                  </span>
+                  <span class="photo-editor__scale scale__slider" aria-label="Шкала цвета">
+                    <span class="scale__toggle" aria-label="Ползунок шкалы цвета"></span>
+                  </span>
+                </label>
+                <input class="visually-hidden" id="tool-contrast" type="radio" name="tool" value="contrast">
+                <label class="photo-editor__label" for="tool-contrast">
+                  <span class="photo-editor__control photo-editor__control--contrast" aria-label="Выбор контрастности фотографии">
+                    <svg class="photo-editor__icon" width="33" height="33">
+                      <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
+                    </svg>
+                  </span>
+                  <span class="photo-editor__scale scale__slider" aria-label="Шкала контрастности">
+                    <span class="scale__toggle" aria-label="Ползунок шкалы контрастности"></span>
+                  </span>
+                </label>
               </div>
               <p class="photo-editor__buttons buttons">
                 <button class="buttons__item buttons__item--submit" type="submit">Запостить</button>
