--- a/source/photo.html
+++ b/source/photo.html
@@ -50,6 +50,7 @@
           <article class="photo-content__item-panorama post">
             <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
             <a class="post__link" href="#">
+              <div class="post__hit">Панорама дня</div>
               <picture class="post__source-photo">
                 <!-- <source media="()" srcset="">
                       <source media="()" srcset=""> -->
