--- a/source/index.html
+++ b/source/index.html
@@ -9,32 +9,32 @@
   </head>
   <body class="page">
     <header class="header">
-      <nav class="main-nav main-nav--closed main-nav--nojs">
-        <div class="main-nav__menu">
-          <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-          </svg>
-          <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
-        </div>
-        <ul class="main-nav__list menu-list">
-          <li class="menu-list__item menu-list__item--active">
-            <a class="menu-list__link" href="#">Главная</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="form.html">Конкурс</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="#">Html Academy</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main">
       <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
-      <section class="intro">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <div class="main-nav__wrapper">
+          <div class="main-nav__menu">
+            <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+            </svg>
+            <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
+          </div>
+          <ul class="main-nav__list menu-list">
+            <li class="menu-list__item menu-list__item--active">
+              <a class="menu-list__link" href="#">Главная</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <section class="intro header__wrapper">
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
           <h3 class="visually-hidden">Способы скачать приложение</h3>
@@ -54,6 +54,8 @@
           <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </article>
       </section>
+    </header>
+    <main class="main">
       <section class="information">
         <div class="wrapper">
           <h2 class="visually-hidden">Информация о приложении</h2>
