--- a/source/photo.html
+++ b/source/photo.html
@@ -9,8 +9,9 @@
   </head>
   <body class="page">
     <header class="header">
-      <div class="header__wrapper">
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+      <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <div class="main-nav__wrapper">
           <div class="main-nav__menu">
             <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
               <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
@@ -30,17 +31,16 @@
               <a class="menu-list__link" href="form.html">Конкурс</a>
             </li>
             <li class="menu-list__item">
-              <a class="menu-list__link" href="#">Html Academy</a>
+              <a class="menu-list__link" href="#">HTML Academy</a>
             </li>
           </ul>
-        </nav>
-      </div>
-    </header>
-    <main class="main">
-      <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
-      <section class="intro-inner main__intro-inner">
+        </div>
+      </nav>
+      <section class="intro-inner">
         <h2 class="intro-inner__title">Фотографии пользователей</h2>
       </section>
+    </header>
+    <main class="main">
       <section class="photo-content">
         <h2 class="visually-hidden">Галерея постов</h2>
         <header class="photo-content__header">
