--- a/source/form.html
+++ b/source/form.html
@@ -9,8 +9,9 @@
   </head>
   <body class="page">
     <header class="header">
-      <div class="header__wrapper">
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+      <h1 class="visually-hidden">Конкурс с мобильным приложением Pink</h1>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <div class="main-nav__wrapper">
           <div class="main-nav__menu">
             <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
               <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
@@ -30,17 +31,16 @@
               <a class="menu-list__link" href="#">Конкурс</a>
             </li>
             <li class="menu-list__item">
-              <a class="menu-list__link" href="#">Html Academy</a>
+              <a class="menu-list__link" href="#">HTML Academy</a>
             </li>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav>
+      <section class="intro intro--inner">
+        <h2 class="intro__title intro__title--width">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      </section>
     </header>
     <main class="main">
-      <h1 class="visually-hidden">Конкурс мобильного приложения Pink</h1>
-      <section class="intro-inner main__intro-inner">
-        <h2 class="intro-inner__title intro-inner__title--width">Конкурс на самое безбашенное путешествие с Пинк</h2>
-      </section>
       <section class="competition">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="competition__header">
