--- a/source/photo.html
+++ b/source/photo.html
@@ -36,8 +36,8 @@
           </ul>
         </div>
       </nav>
-      <section class="intro-inner">
-        <h2 class="intro-inner__title">Фотографии пользователей</h2>
+      <section class="intro intro--inner">
+        <h2 class="intro__title">Фотографии пользователей</h2>
       </section>
     </header>
     <main class="main">
